369: Modify bgcolor to green

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <head>
     <title>Sample "Hello, World" Application</title>
   </head>
-  <body bgcolor=white>
+  <body bgcolor=green>
 
     <table border="0" cellpadding="100">
       <tr>
